--- a/_posts/2019-12-22-the-us-narrative-today.html
+++ b/_posts/2019-12-22-the-us-narrative-today.html
@@ -1592,107 +1592,107 @@ stories:
   domain: http://www.metrotimes.com/
   link: https://www.metrotimes.com/the-scene/archives/2019/12/20/the-hip-hop-nutcracker-turns-tradition-on-its-head-at-detroits-masonic-temple
 images:
-- name: liberty-back-statue-liberty-back-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purple-storm.jpg
-- name: old-door-lock-old-door-lock-2-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alien-goggles.jpg
-- name: old-door-lock-old-door-lock-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dark-dali.jpg
-- name: containership-containership-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
-- name: oldtrain-oldtrain-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-smoking-cigarette.jpg
-- name: copper-circuit-white-house-lawn-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-white-house-lawn-view.jpg
-- name: oldcabin-store-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-circuit.jpg
-- name: docks-docks-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-granite.jpg
-- name: bluelake-dry-skin-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-00-00-00.jpg
-- name: windowmountain-window-mountain-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purple-storm.jpg
-- name: supreme-court-supremecourt-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-ww2-color.jpg
-- name: border-fence-border-fence-on-hill-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-atari-asteroids.jpg
-- name: nazi-invasion-pigeons-do-not-feed-them.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-pigeons-do-not-feed-them.jpg
-- name: oldhousecars-house-old-cars-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-attack-planes.jpg
-- name: old-cabin-oldcabin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-gan-vogh.jpg
-- name: aws-s3-square-dragon-close-up-yellow-collage-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-dragon-close-up-yellow-collage-square.jpg
-- name: mosaic-face-mosaic-face-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-brush.jpg
-- name: old-barn-old-barn-1500-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-dali.jpg
-- name: cargo-ship-cargo-ship-on-sea-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-plentiful.jpg
-- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-- name: old-cabin-oldcabin-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-storm.jpg
-- name: docks-docks-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-satan-red.jpg
-- name: windowmountain-window-mountain-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-constitution.jpg
-- name: braceros-domingo-ulloa-dragon-desert-looking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dragon-desert-looking.jpg
-- name: meadowbutterfly-meadow-butterfly-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dry-skin.jpg
-- name: bf-skinner-subway-underground_35904617894_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-subway-underground_35904617894_o.jpg
-- name: statue-of-liberty-front-view-statueofliberty-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-yellow-collage.jpg
-- name: trucksilo-trucksilo-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-alberto-giacometti.jpg
-- name: server-cloud-server-racks-door-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-paper.jpg
-- name: power-lines-power-lines-empty-space-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-plentiful.jpg
-- name: cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-- name: capital-battle-capitolbattle-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-aqua.jpg
-- name: braceros-domingo-ulloa-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-piano-paris-hospital.jpg
-- name: flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-- name: oldhouse-oldhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crabapple.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-- name: dc-statue-dcstatue-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gred-mash.jpg
-- name: san-francisco-street-view-san-francisco-street-view-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-kandinsky-bv.jpg
-- name: window-window-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-diego-rivera1.jpg
-- name: eduardo-eduardo-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-matrix.jpg
-- name: curtain-curtain-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-yellow-paper.jpg
-- name: mediterranean-mediterranean-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-atari-missle.jpg
-- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-- name: old-granary-field-granaryfield-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-electricity.jpg
-- name: white-house-whitehouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-really-hot.jpg
-- name: old-door-lock-old-door-lock-2-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit-2.jpg
-- name: machine-road-machine-road-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-copper-circuit-2.jpg
-- name: ellis-island-ellisisland-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-alberto-giacometti.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-- name: old-gas-pumps-oldgaspumps-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purp-paper.jpg
-- name: old-door-lock-old-door-lock-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-copper-circuit-2.jpg
+- name: gypsymosaic-gypsy-eyes-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-constitution.jpg
+- name: power-lines-power-lines-empty-space-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-ww2-dresden.jpg
+- name: udnie-DSC_0264.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0264.jpg
+- name: supreme-court-supremecourt-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-sunday.jpg
+- name: blossombar-purp-paper-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purp-paper-file-00-00-24-99.jpg
+- name: stalin-time-old-church-in-field.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-church-in-field.jpg
+- name: power-lines-power-lines-empty-space-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-green-zuma.jpg
+- name: wind-mills-windmills-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-matrix.jpg
+- name: server-cloud-server-racks-door-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-emily-carr.jpg
+- name: blossombar-yellow-collage-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-24-99.jpg
+- name: downtown-los-angeles-downtown-la-monet-one.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-monet-one.JPG
+- name: mosaic-face-mosaic-face-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-green-zuma.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
+- name: walled-garden-walled-garden-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-satan-red.jpg
+- name: wind-mills-windmills-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-far-away.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sunday.jpg
+- name: abandonedbuildings_neo_instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_neo_instinct.jpg
+- name: statue-of-liberty-front-view-statueofliberty-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-light-dali.jpg
+- name: stories-crypto-machine-bletchley-copper-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-crypto-machine-bletchley-copper-circuit.png
+- name: blossombar-post-modern-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-post-modern-file-00-00-00-00.jpg
+- name: border-fence-border-fence-on-hill-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-gred-mash.jpg
+- name: server-cloud-server-racks-door-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dark-soul.jpg
+- name: docks-docks-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-crunch-paper.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
+- name: subway-subway-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-smoking-cigarette.jpg
+- name: status-berlin-status-berlin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-crafty-painting.jpg
+- name: liberty-back-statue-liberty-back-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-atari-missle.jpg
+- name: oldcabin-store-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-aqua.jpg
+- name: windowmountain-window-mountain-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-missle.jpg
+- name: oldbarn-oldbarn-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purp-paper.jpg
+- name: hollywood-building-hollywood-building-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-feed-people.jpg
+- name: braceros-domingo-ulloa-firetruck-bright-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-firetruck-bright-sun.jpg
+- name: downtheline-downtheline-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-wols.jpg
+- name: legal-statue-legalstatue-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-mucha-mult.jpg
+- name: oldsmallboat-oldsmallboat-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-alien-goggles.jpg
+- name: stories-new-digital-bits-capital-dc-flag-side-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-digital-bits-capital-dc-flag-side-view.jpg
+- name: old-gas-pumps-oldgaspumps-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-far-away.jpg
+- name: oldhotel-oldhotel-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-constitution.jpg
+- name: copper-circuit-vancouver-waterfront_36556357642_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-vancouver-waterfront_36556357642_o.jpg
+- name: oldcabin-store-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-alberto-giacometti.jpg
+- name: gears-4882162452-fa3126b38d-b-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-far-away.jpg
+- name: copper-circuit-san-francisco-salesforce-bay-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-salesforce-bay-bridge.jpg
+- name: stalin-time-surveillance-cameras_36569244062_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-surveillance-cameras_36569244062_o.jpg
+- name: art-museum-art-museum-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-aqua.jpg
+- name: cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
+- name: stalin-time-bletchley-computer-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-bletchley-computer-racks.jpg
+- name: aws-s3-square-file-00-00-35-50-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-35-50-square.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+- name: oldcabin-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-constitution.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
+- name: castle-wall-DSC-0067-colorful-dream.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-colorful-dream.JPG
 ---
 Notre Dame Indiana Basketball.&nbsp;Personal Loan Providers Are Hard To Find That Are Reputable.&nbsp;Bosque County Holiday Guide.&nbsp;Peters Township Chamber Of Commerce Celebrates Holidays.&nbsp;Velma Pownell, 96, Of Watertown.&nbsp;Few Details Available In Dearborn Shooting Death That Occurred Outside Of Police Station.&nbsp;Few Details Available In Dearborn Shooting Death That Occurred Outside Of Police Station.&nbsp;Notre Dame Fire Wakes The World Up To Dangers Of Lead Dust.&nbsp;
